fix: delete dokumentasi swagger controller Transaksi
