# backend/storage/api-docs/api-docs.json
@@ -2161,262 +2161,6 @@
                 ]
             }
         },
-        "/api/transaksi": {
-            "get": {
-                "tags": [
-                    "Transaksi"
-                ],
-                "summary": "Get All Transaksi",
-                "description": "Get All Transaksi",
-                "operationId": "getTransaksi",
-                "responses": {
-                    "200": {
-                        "description": "Daftar Transaksi Berhasil Ditemukan",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Daftar Transaksi Berhasil Ditemukan"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Transaksi"
-                ],
-                "summary": "Add Transaksi",
-                "description": "Add Transaksi",
-                "operationId": "postTransaksi",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "detailTransaksi": {
-                                        "type": "object",
-                                        "example": "{produkId: 2, jumlah: 3}"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful Register",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Transaksi Berhasil Ditambahkan"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/transaksi/:id": {
-            "get": {
-                "tags": [
-                    "Transaksi"
-                ],
-                "summary": "Get Single Transaksi",
-                "description": "Get Single Transaksi",
-                "operationId": "getTransaksiById",
-                "responses": {
-                    "200": {
-                        "description": "Transaksi Berhasil Ditemukan",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Transaksi Berhasil Ditemukan"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Transaksi"
-                ],
-                "summary": "Delete Transaksi",
-                "description": "Delete Transaksi",
-                "operationId": "deleteTransaksi",
-                "responses": {
-                    "200": {
-                        "description": "Successful Register",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Transaksi Berhasil Dihapus"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "patch": {
-                "tags": [
-                    "Transaksi"
-                ],
-                "summary": "Update Transaksi",
-                "description": "Update Transaksi",
-                "operationId": "patchTransaksi",
-                "requestBody": {
-                    "required": false,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "status": {
-                                        "type": "integer",
-                                        "example": "1"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful Register",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Transaksi Berhasil Diupdate"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/user/transaksi": {
-            "get": {
-                "tags": [
-                    "Transaksi"
-                ],
-                "summary": "Get Transaksi By User Id",
-                "description": "Get Transaksi By User Id",
-                "operationId": "getTransaksiByUserId",
-                "responses": {
-                    "200": {
-                        "description": "Daftar Transaksi Berhasil Ditemukan",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": "true"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Daftar Transaksi Berhasil Ditemukan"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/wishlists": {
             "get": {
                 "tags": [
